fixed footer overlap

--- a/scss/print.scss
+++ b/scss/print.scss
@@ -79,7 +79,7 @@ body {
 }
 
 footer {
-  display: flex;
+  display: none;
   font-size: 10px;
   position: absolute;
   bottom: 2px;
