--- a/scss/resp-style.scss
+++ b/scss/resp-style.scss
@@ -48,6 +48,7 @@ body {
     #ffffff 100%
   );
 }
+
 .page-container {
   position: relative;
   min-height: 100vh;
@@ -58,12 +59,13 @@ body {
 }
 
 #content-wrapper {
-  padding-bottom: 2.5rem;
-  // max-height: 100%;
-  padding-bottom: 25px;
+  height: fit-content;
+  position: relative;
+  //padding-bottom: 25px;
   color: #2c383b;
   width: 100%;
   padding: 10px;
+  padding-bottom: 2rem; /* Footer height */
 
   li {
     list-style: none;
@@ -154,7 +156,7 @@ body {
   width: auto;
 
   img {
-    height: 200px;
+    height: 190px;
     border: 5px solid #2c383b;
     border-radius: 50%;
   }
@@ -260,6 +262,11 @@ body {
   }
 }
 
+#skill-content {
+  display: flex;
+  justify-content: space-around;
+}
+
 #skill-content li {
   margin-bottom: 10px;
 }
@@ -289,6 +296,20 @@ body {
   }
 }
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2rem; /* Footer height */
+  color: #2c383b;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 10px;
+  letter-spacing: 2px;
+  padding: 5px;
+}
+
 @media only screen and (min-width: 820px) {
   body {
     background: linear-gradient(
@@ -299,14 +320,8 @@ body {
       #ffffff 100%
     );
   }
-  .page-container {
-    position: relative;
-    min-height: 100vh;
-  }
 
   #content-wrapper {
-    padding-bottom: 2.5rem; /* Footer height */
-
     margin: 10px 5px;
     display: flex;
     justify-content: space-evenly;
@@ -332,23 +347,5 @@ body {
         }
       }
     }
-  }
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 2.5rem;
-  color: #fff;
-  align-self: flex-end;
-  justify-self: flex-end;
-  display: flex;
-  font-size: 10px;
-  letter-spacing: 2px;
-  padding: 5px;
-
-  .divide {
-    margin: 0 3px;
   }
 }
